--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -1,8 +1,8 @@
     <!-- Setting DataContext in XAML for better performance -->
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        x:Class="SimpleSimulator.MainWindow"
-        xmlns:local="clr-namespace:SimpleSimulator"
+        x:Class="SimpleSimulator.Views.MainWindow"
+        xmlns:local="clr-namespace:SimpleSimulator.ViewModels"
         x:DataType="local:SimulationViewModel" 
         Title="Projectile Motion Simulator"
         Width="600"
