--- a/src/Views/MainMenuView.axaml
+++ b/src/Views/MainMenuView.axaml
@@ -2,7 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="SimpleSimulator.Views.MainMenuView"
              xmlns:viewModels="clr-namespace:SimpleSimulator.ViewModels"
-             x:DataType="viewModels:MainViewModel">
+             x:DataType="viewModels:MainMenuViewModel">
     
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
         <TextBlock Text="Select a Simulation!" FontSize="20" FontWeight="Bold" Margin="10"/>
