--- a/src/Views/MainMenuView.axaml
+++ b/src/Views/MainMenuView.axaml
@@ -1,7 +1,9 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="SimpleSimulator.Views.MainMenuView"
-             DataContext="{Binding}">
+                     xmlns:viewModels="clr-namespace:SimpleSimulator.ViewModels"
+        xmlns:views="clr-namespace:SimpleSimulator.Views"
+             x:DataType="viewModels:MainMenuViewModel">
     
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
         <TextBlock Text="Select a Simulation!" FontSize="20" FontWeight="Bold" Margin="10"/>
