--- a/src/Views/MainMenuView.axaml
+++ b/src/Views/MainMenuView.axaml
@@ -1,13 +1,13 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="SimpleSimulator.Views.MainMenuView"
-                     xmlns:viewModels="clr-namespace:SimpleSimulator.ViewModels"
-        xmlns:views="clr-namespace:SimpleSimulator.Views"
+             xmlns:viewModels="clr-namespace:SimpleSimulator.ViewModels"
+             xmlns:views="clr-namespace:SimpleSimulator.Views"
              x:DataType="viewModels:MainMenuViewModel">
-    
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
         <TextBlock Text="Select a Simulation!" FontSize="20" FontWeight="Bold" Margin="10"/>
-        <Button Content="Projectile Motion Simulation" Command="{Binding OpenProjectileMotionCommand}" Width="250" Margin="5"/>
+        <Button Content="Projectile Motion Simulation" Command="{}" Width="250" Margin="5"/>
         <Button Content="Dummy Simulation" Command="{Binding OpenProjectileMotionCommand}" Width="250" Margin="5"/>
     </StackPanel>
 </UserControl>
+<!-- Binding DataContext.NavigateToProjectileMotionCommand, RelativeSource={RelativeSource AncestorType=Window -->
