--- a/src/Views/MainWindow.axaml
+++ b/src/Views/MainWindow.axaml
@@ -1,12 +1,17 @@
 <Window xmlns="https://github.com/avaloniaui"
+        x:Name="RootWindow"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:viewModels="clr-namespace:SimpleSimulator.ViewModels"
         xmlns:views="clr-namespace:SimpleSimulator.Views"
+        xmlns:helpers="clr-namespace:SimpleSimulator.Helpers"
         x:Class="SimpleSimulator.Views.MainWindow"
         x:DataType="viewModels:MainWindowViewModel"
         Title="Simple Simulator"
         Width="1024"
         Height="768">
+    <Window.Resources>
+    <helpers:BindingProxy x:Key="MainWindowViewModelProxy" Data="{Binding}" />
+  </Window.Resources>
   <Window.DataTemplates>
     <DataTemplate DataType="viewModels:MainMenuViewModel">
       <views:MainMenuView />
