added back button logic

--- a/src/Views/MainWindow.axaml
+++ b/src/Views/MainWindow.axaml
@@ -17,5 +17,7 @@
       <views:ProjectileMotionView />
     </DataTemplate>
   </Window.DataTemplates>
-  <ContentControl Content="{Binding CurrentView}"/>
+    <Grid>
+        <ContentControl Content="{Binding CurrentView}"/>
+    </Grid>
 </Window>
